# twitch_app

./: .gitignore  CMakeLists.txt  main.cpp  resources.qrc
rest/: rest.cpp  rest.h
twitch/: channel.cpp  channel.h  user.cpp  user.h
widgets/: mainwindow.cpp  mainwindow.h  mainwindow.ui  secondwidget.cpp  secondwidget.h  sidebar.cpp  sidebar.h
